--- a/src/main/webapp/app/entities/ponudjaci/update/ponudjaci.scss
+++ b/src/main/webapp/app/entities/ponudjaci/update/ponudjaci.scss
@@ -1,7 +1,7 @@
-.form-control {
-  width: 300px;
-  height: 35px;
-}
+//.form-control {
+//  width: 300px;
+//  height: 35px;
+//}
 //.labela{
 //  font-size: 15px;
 //}
