--- a/src/main/webapp/app/entities/postupci/list/postupci.component.html
+++ b/src/main/webapp/app/entities/postupci/list/postupci.component.html
@@ -92,7 +92,13 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let postupci of postupcis; trackBy: trackId" data-cy="entityTable">
+        <tr
+          [routerLink]="['/tenderi-home']"
+          [queryParams]="{ sifra: postupci.sifraPostupka }"
+          class="hovers"
+          *ngFor="let postupci of postupcis; trackBy: trackId"
+          data-cy="entityTable"
+        >
           <td>
             <a [routerLink]="['/postupci', postupci.id, 'view']">{{ postupci.id }}</a>
           </td>
