--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -17,6 +17,10 @@
         <fa-icon icon="plus"></fa-icon>
         <span jhiTranslate="tenderApp.specifikacije.home.createLabel"> Kreiraj novi Specifikacije </span>
       </button>
+      <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
+      <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
+      <button type="button" class="btn btn-primary">Unesi</button>
+      <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
     </div>
   </h2>
 
