--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -19,8 +19,9 @@
       </button>
       <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
       <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
-      <button type="button" class="btn btn-primary">Unesi</button>
+      <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
       <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
+      <input hidden #fileInput type="file" id="file1" />
     </div>
   </h2>
 
