--- a/src/main/webapp/app/entities/vrednovanje/list/vrednovanje.component.html
+++ b/src/main/webapp/app/entities/vrednovanje/list/vrednovanje.component.html
@@ -7,6 +7,7 @@
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
         <span jhiTranslate="tenderApp.vrednovanje.home.refreshListLabel">Refresh list</span>
       </button>
+      <button type="button" class="btn btn-primary" (click)="exportTable()">Excel</button>
     </div>
   </h2>
 
