--- a/src/main/webapp/app/entities/tenderi-home/list/tenderi-home.component.html
+++ b/src/main/webapp/app/entities/tenderi-home/list/tenderi-home.component.html
@@ -23,12 +23,12 @@
       <jhi-prvorangirani [postupak]="sifra"></jhi-prvorangirani>
     </ng-template>
   </li>
-  <!--  <li [ngbNavItem]="5">-->
-  <!--    <a ngbNavLink>Partije bez ponude</a>-->
-  <!--    <ng-template ngbNavContent>-->
-  <!--      <jhi-hvale-ponude [postupak]="sifra"></jhi-hvale-ponude>-->
-  <!--    </ng-template>-->
-  <!--  </li>-->
+  <li [ngbNavItem]="5">
+    <a ngbNavLink>Partije bez ponude</a>
+    <ng-template ngbNavContent>
+      <jhi-hvale-ponude [postupak]="sifra"></jhi-hvale-ponude>
+    </ng-template>
+  </li>
 </ul>
 
 <div [ngbNavOutlet]="nav" class="mt-2"></div>
