--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -12,7 +12,7 @@
         id="jh-create-entity"
         data-cy="entityCreateButton"
         class="btn btn-primary jh-create-entity create-view-ponude"
-        [routerLink]="['/view-ponude/new']"
+        [routerLink]="['/ponude/new']"
       >
         <fa-icon icon="plus"></fa-icon>
         <span jhiTranslate="tenderApp.viewPonude.home.createLabel"> Kreiraj novi View Ponude </span>
