--- a/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
+++ b/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
@@ -186,10 +186,10 @@
           />
         </div>
 
-        <div class="row mb-3">
-          <label class="form-label" jhiTranslate="tenderApp.ponude.selected" for="field_selected">Selected</label>
-          <input type="checkbox" class="form-check" name="selected" id="field_selected" data-cy="selected" formControlName="selected" />
-        </div>
+        <!--        <div class="row mb-3">-->
+        <!--          <label class="form-label" jhiTranslate="tenderApp.ponude.selected" for="field_selected">Selected</label>-->
+        <!--          <input type="checkbox" class="form-check" name="selected" id="field_selected" data-cy="selected" formControlName="selected" />-->
+        <!--        </div>-->
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="tenderApp.ponude.sifraPonudjaca" for="field_sifraPonudjaca">Sifra Ponudjaca</label>
