--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -39,12 +39,12 @@
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="navigateToWithComponentValues()">
-          <th scope="col" jhiSortBy="id">
-            <div class="d-flex">
-              <span jhiTranslate="global.field.id">ID</span>
-              <fa-icon class="p-1" icon="sort"></fa-icon>
-            </div>
-          </th>
+          <!--          <th scope="col" jhiSortBy="id">-->
+          <!--            <div class="d-flex">-->
+          <!--              <span jhiTranslate="global.field.id">ID</span>-->
+          <!--              <fa-icon class="p-1" icon="sort"></fa-icon>-->
+          <!--            </div>-->
+          <!--          </th>-->
           <th scope="col" jhiSortBy="sifraPostupka">
             <div class="d-flex">
               <span jhiTranslate="tenderApp.viewPonude.sifraPostupka">Sifra Postupka</span>
@@ -116,9 +116,9 @@
       </thead>
       <tbody>
         <tr *ngFor="let viewPonude of viewPonudes; trackBy: trackId" data-cy="entityTable">
-          <td>
-            <a [routerLink]="['/ponude', viewPonude.id, 'view']">{{ viewPonude.id }}</a>
-          </td>
+          <!--          <td>-->
+          <!--            <a [routerLink]="['/ponude', viewPonude.id, 'view']">{{ viewPonude.id }}</a>-->
+          <!--          </td>-->
           <td>{{ viewPonude.sifraPostupka }}</td>
           <td>{{ viewPonude.sifraPonude }}</td>
           <td>{{ viewPonude.brojPartije }}</td>
@@ -160,6 +160,21 @@
           </td>
         </tr>
       </tbody>
+      <tfoot>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td>Ukupno podnudjeno:</td>
+          <td>{{ ukupno_ponudjeno }}</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </tfoot>
     </table>
   </div>
 
