--- a/src/main/webapp/app/entities/specifikacije/update/specifikacije-update.component.html
+++ b/src/main/webapp/app/entities/specifikacije/update/specifikacije-update.component.html
@@ -216,14 +216,14 @@
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="tenderApp.specifikacije.karakteristika" for="field_karakteristika">Karakteristika</label>
-          <input
+          <textarea
             type="text"
             class="form-control"
             name="karakteristika"
             id="field_karakteristika"
             data-cy="karakteristika"
             formControlName="karakteristika"
-          />
+          ></textarea>
         </div>
       </div>
 
