--- a/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
+++ b/src/main/webapp/app/entities/ponude/update/ponude-update.component.html
@@ -192,27 +192,40 @@
         <!--        </div>-->
 
         <div class="row mb-3">
-          <label class="form-label" jhiTranslate="tenderApp.ponude.sifraPonudjaca" for="field_sifraPonudjaca">Sifra Ponudjaca</label>
-          <input
-            type="number"
+          <!--          <label class="form-label" jhiTranslate="tenderApp.ponude.sifraPonudjaca" for="field_sifraPonudjaca">Sifra Ponudjaca</label>-->
+          <!--          <input-->
+          <!--            type="number"-->
+          <!--            class="form-control"-->
+          <!--            name="sifraPonudjaca"-->
+          <!--            id="field_sifraPonudjaca"-->
+          <!--            data-cy="sifraPonudjaca"-->
+          <!--            formControlName="sifraPonudjaca"-->
+          <!--          />-->
+          <label class="form-label">Ponudjac</label>
+          <select
             class="form-control"
-            name="sifraPonudjaca"
-            id="field_sifraPonudjaca"
+            id="field_sifraPonudjaca1"
             data-cy="sifraPonudjaca"
+            name="sifraPonudjaca"
             formControlName="sifraPonudjaca"
-          />
+          >
+            <option [ngValue]="null"></option>
+            <option [ngValue]="ponudjaciOption.id" *ngFor="let ponudjaciOption of ponudjaci">
+              {{ ponudjaciOption.nazivPonudjaca }}
+            </option>
+          </select>
         </div>
 
         <div class="row mb-3">
           <label class="form-label" jhiTranslate="tenderApp.ponude.karakteristika" for="field_karakteristika">Karakteristika</label>
-          <input
+          <textarea
             type="text"
             class="form-control"
             name="karakteristika"
             id="field_karakteristika"
             data-cy="karakteristika"
             formControlName="karakteristika"
-          />
+          ></textarea>
         </div>
       </div>
 
