--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -7,21 +7,32 @@
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
         <span jhiTranslate="tenderApp.specifikacije.home.refreshListLabel">Refresh list</span>
       </button>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button class="btn btn-primary" [routerLink]="['/ponude/new']">
+          <fa-icon icon="plus"></fa-icon>
+          <span> Unesi Ponudu </span>
+        </button>
 
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-specifikacije"
-        [routerLink]="['/specifikacije/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="tenderApp.specifikacije.home.createLabel"> Kreiraj novi Specifikacije </span>
-      </button>
-      <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
-      <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
-      <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
-      <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
-      <input hidden #fileInput type="file" id="file1" />
+        <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
+        <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
+        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
+        <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
+      </div>
+
+      <!--      <button-->
+      <!--        id="jh-create-entity"-->
+      <!--        data-cy="entityCreateButton"-->
+      <!--        class="btn btn-primary jh-create-entity create-specifikacije"-->
+      <!--        [routerLink]="['/specifikacije/new']"-->
+      <!--      >-->
+      <!--        <fa-icon icon="plus"></fa-icon>-->
+      <!--        <span jhiTranslate="tenderApp.specifikacije.home.createLabel"> Kreiraj novi Specifikacije </span>-->
+      <!--      </button>-->
+      <!--      <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>-->
+      <!--      <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>-->
+      <!--      <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>-->
+      <!--      <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>-->
+      <!--      <input hidden #fileInput type="file" id="file1" />-->
     </div>
   </h2>
 
