--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -7,21 +7,17 @@
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
         <span jhiTranslate="tenderApp.viewPonude.home.refreshListLabel">Refresh list</span>
       </button>
+      <div class="btn-group" role="group" aria-label="Basic example">
+        <button class="btn btn-primary" [routerLink]="['/ponude/new']">
+          <fa-icon icon="plus"></fa-icon>
+          <span> Unesi Ponudu </span>
+        </button>
 
-      <button
-        id="jh-create-entity"
-        data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-view-ponude"
-        [routerLink]="['/ponude/new']"
-      >
-        <fa-icon icon="plus"></fa-icon>
-        <span jhiTranslate="tenderApp.viewPonude.home.createLabel"> Kreiraj novi View Ponude </span>
-      </button>
-
-      <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
-      <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
-      <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
-      <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
+        <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
+        <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
+        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
+        <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
+      </div>
     </div>
   </h2>
 
