--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -34,6 +34,7 @@
       <!--      <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>-->
       <!--      <input hidden #fileInput type="file" id="file1" />-->
     </div>
+    <input hidden #fileInput type="file" id="file1" />
   </h2>
 
   <jhi-alert-error></jhi-alert-error>
