--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -18,6 +18,7 @@
         <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
         <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
       </div>
+      <input hidden #fileInput type="file" id="file1" />
     </div>
   </h2>
 
