--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -12,7 +12,6 @@
           <fa-icon icon="plus"></fa-icon>
           <span> Unesi Ponudu </span>
         </button>
-
         <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
         <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
         <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
@@ -21,7 +20,20 @@
       <input hidden #fileInput type="file" id="file1" />
     </div>
   </h2>
-
+  <select
+    class="form-control"
+    id="field_sifraPonudjaca"
+    data-cy="sifraPonudjaca"
+    name="sifraPonudjaca"
+    [(ngModel)]="sifraPonude"
+    (change)="loadSifraPonude()"
+    cl="loadPageSifraPonude()"
+  >
+    <option [ngValue]="null">Izaberi ponudjaca</option>
+    <option id="ponudjac" [ngValue]="ponudjaciOption.sifraPonude" *ngFor="let ponudjaciOption of viewPonudes">
+      {{ ponudjaciOption.nazivPonudjaca }}
+    </option>
+  </select>
   <jhi-alert-error></jhi-alert-error>
 
   <jhi-alert></jhi-alert>
