--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -151,19 +151,19 @@
           <td>{{ prvorangirani.bodCijena }}</td>
           <td>{{ prvorangirani.bodRok }}</td>
           <td>{{ prvorangirani.bodUkupno }}</td>
-          <td class="text-end">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/prvorangirani', prvorangirani.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Pregled</span>
-              </button>
-            </div>
-          </td>
+          <!--          <td class="text-end">-->
+          <!--            <div class="btn-group">-->
+          <!--              <button-->
+          <!--                type="submit"-->
+          <!--                [routerLink]="['/prvorangirani', prvorangirani.id, 'view']"-->
+          <!--                class="btn btn-info btn-sm"-->
+          <!--                data-cy="entityDetailsButton"-->
+          <!--              >-->
+          <!--                <fa-icon icon="eye"></fa-icon>-->
+          <!--                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Pregled</span>-->
+          <!--              </button>-->
+          <!--            </div>-->
+          <!--          </td>-->
         </tr>
       </tbody>
       <tfoot>
