--- a/src/main/webapp/app/entities/vrednovanje/list/vrednovanje.component.html
+++ b/src/main/webapp/app/entities/vrednovanje/list/vrednovanje.component.html
@@ -151,19 +151,19 @@
           <td>{{ vrednovanje.bodCijena }}</td>
           <td>{{ vrednovanje.bodRok }}</td>
           <td>{{ vrednovanje.bodUkupno }}</td>
-          <td class="text-end">
-            <div class="btn-group">
-              <button
-                type="submit"
-                [routerLink]="['/vrednovanje', vrednovanje.id, 'view']"
-                class="btn btn-info btn-sm"
-                data-cy="entityDetailsButton"
-              >
-                <fa-icon icon="eye"></fa-icon>
-                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Pregled</span>
-              </button>
-            </div>
-          </td>
+          <!--          <td class="text-end">-->
+          <!--&lt;!&ndash;            <div class="btn-group">&ndash;&gt;-->
+          <!--&lt;!&ndash;              <button&ndash;&gt;-->
+          <!--&lt;!&ndash;                type="submit"&ndash;&gt;-->
+          <!--&lt;!&ndash;                [routerLink]="['/vrednovanje', vrednovanje.id, 'view']"&ndash;&gt;-->
+          <!--&lt;!&ndash;                class="btn btn-info btn-sm"&ndash;&gt;-->
+          <!--&lt;!&ndash;                data-cy="entityDetailsButton"&ndash;&gt;-->
+          <!--&lt;!&ndash;              >&ndash;&gt;-->
+          <!--&lt;!&ndash;                <fa-icon icon="eye"></fa-icon>&ndash;&gt;-->
+          <!--&lt;!&ndash;                <span class="d-none d-md-inline" jhiTranslate="entity.action.view">Pregled</span>&ndash;&gt;-->
+          <!--&lt;!&ndash;              </button>&ndash;&gt;-->
+          <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+          <!--          </td>-->
         </tr>
       </tbody>
       <tfoot>
