--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -30,7 +30,7 @@
     cl="loadPageSifraPonude()"
   >
     <option [ngValue]="null">Izaberi ponudjaca</option>
-    <option id="ponudjac" [ngValue]="ponudjaciOption.sifraPonude" *ngFor="let ponudjaciOption of viewPonudes">
+    <option id="ponudjac" *ngFor="let ponudjaciOption of ponudjaci">
       {{ ponudjaciOption.nazivPonudjaca }}
     </option>
   </select>
