--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -10,7 +10,7 @@
       <div class="btn-group" role="group" aria-label="Basic example">
         <button class="btn btn-primary" [routerLink]="['/ponude/new']">
           <fa-icon icon="plus"></fa-icon>
-          <span> Unesi Ponudu </span>
+          <span> Unesi Specifikaciju </span>
         </button>
 
         <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
