--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -15,7 +15,8 @@
         (change)="loadSifraPonude()"
         cl="loadPageSifraPonude()"
       >
-        <option [ngValue]="null">Vrati</option>
+        <option value="" selected disabled>Please select</option>
+        <!--        <option [ngValue]="null">Vrati</option>-->
         <option id="ponudjac" [ngValue]="ponudjaciOption.sifraPonude" *ngFor="let ponudjaciOption of ponudjaci">
           {{ ponudjaciOption.nazivPonudjaca }}
         </option>
