--- a/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
+++ b/src/main/webapp/app/entities/prvorangirani/list/prvorangirani.component.html
@@ -3,26 +3,6 @@
     <span jhiTranslate="tenderApp.prvorangirani.home.title">Prvorangiranis</span>
 
     <div class="d-flex justify-content-end">
-      <select
-        *ngIf="postupak"
-        class="form-control-sm"
-        id="field_sifraPonudjaca"
-        data-cy="sifraPonudjaca"
-        name="sifraPonudjaca"
-        placeholder="Unesite Ponudjaca"
-        [(ngModel)]="sifraPonude"
-        (change)="loadSifraPonude()"
-        cl="loadPageSifraPonude()"
-      >
-        <option value="" selected disabled>Please select</option>
-        <!--        <option [ngValue]="null">Vrati</option>-->
-        <option id="ponudjac" [ngValue]="ponudjaciOption.sifraPonude" *ngFor="let ponudjaciOption of ponudjaci">
-          {{ ponudjaciOption.nazivPonudjaca }}
-        </option>
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button">Button</button>
-        </div>
-      </select>
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
         <span jhiTranslate="tenderApp.prvorangirani.home.refreshListLabel">Refresh list</span>
@@ -30,7 +10,26 @@
       <button type="button" class="btn btn-primary" (click)="exportTable()">Excel</button>
     </div>
   </h2>
-
+  <select
+    *ngIf="postupak"
+    class="form-control"
+    id="field_sifraPonudjaca"
+    data-cy="sifraPonudjaca"
+    name="sifraPonudjaca"
+    placeholder="Unesite Ponudjaca"
+    [(ngModel)]="sifraPonude"
+    (change)="loadSifraPonude()"
+    cl="loadPageSifraPonude()"
+  >
+    <option value="" selected disabled>Please select</option>
+    <!--        <option [ngValue]="null">Vrati</option>-->
+    <option id="ponudjac" [ngValue]="ponudjaciOption.sifraPonude" *ngFor="let ponudjaciOption of ponudjaci">
+      {{ ponudjaciOption.nazivPonudjaca }}
+    </option>
+    <div class="input-group-append">
+      <button class="btn btn-outline-secondary" type="button">Button</button>
+    </div>
+  </select>
   <jhi-alert-error></jhi-alert-error>
 
   <jhi-alert></jhi-alert>
