--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -1,7 +1,10 @@
 <div>
   <h2 id="page-heading" data-cy="SpecifikacijeHeading">
     <span jhiTranslate="tenderApp.specifikacije.home.title">Specifikacijes</span>
-
+    <div class="mb-3">
+      <label for="formFile" (click)="fileInput.click()" class="form-label"><span></span></label>
+      <input #fileInput type="file" id="file" (input)="uploadFile()" class="form-control" type="file" id="formFile" />
+    </div>
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
@@ -14,8 +17,8 @@
         </button>
 
         <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
-        <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>
-        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
+        <!--        <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>-->
+        <!--        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>-->
         <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
       </div>
 
