--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -17,7 +17,7 @@
         </button>
         <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
         <!--        <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>-->
-        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>
+        <!--        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>-->
         <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
       </div>
       <!--      <input hidden #fileInput type="file" id="file1" />-->
