--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -177,12 +177,12 @@
                 <span jhiTranslate="global.menu.account.settings">Settings</span>
               </a>
             </li>
-            <li *ngSwitchCase="true">
-              <a class="dropdown-item" routerLink="pomoc" routerLinkActive="active" (click)="collapseNavbar()" data-cy="settings">
-                <fa-icon icon="book" [fixedWidth]="true"></fa-icon>
-                <span>Pomoc</span>
-              </a>
-            </li>
+            <!--            <li *ngSwitchCase="true">-->
+            <!--              <a class="dropdown-item" routerLink="pomoc" routerLinkActive="active" (click)="collapseNavbar()" data-cy="settings">-->
+            <!--                <fa-icon icon="book" [fixedWidth]="true"></fa-icon>-->
+            <!--                <span>Pomoc</span>-->
+            <!--              </a>-->
+            <!--            </li>-->
             <li *ngSwitchCase="true">
               <a
                 class="dropdown-item"
