--- a/src/main/webapp/app/entities/pomoc/list/pomoc.component.html
+++ b/src/main/webapp/app/entities/pomoc/list/pomoc.component.html
@@ -1,1 +1,2 @@
-<video controls autoplay src="https://kosovic-drasko.github.io/drasko/Upustvo.mp4"></video>
+<!--<video controls autoplay src="https://kosovic-drasko.github.io/drasko/Upustvo.mp4"></video>-->
+<label>Pomoc</label>
