--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -17,7 +17,7 @@
         </button>
 
         <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
-        <button type="button" class="btn btn-primary" (click)="exportArray()">Excel</button>
+        <button type="button" class="btn btn-primary" (click)="Excel()">Excel</button>
       </div>
     </div>
     <input hidden #fileInput type="file" id="file1" />
@@ -175,8 +175,8 @@
           <td></td>
           <td></td>
           <td></td>
-          <td>Ukupno procijenjeno:</td>
-          <td>{{ ukupno_procjenjeno }}</td>
+          <!--          <td>Ukupno procijenjeno:</td>-->
+          <!--          <td>{{ ukupno_procjenjeno }}</td>-->
           <td></td>
           <td></td>
           <td></td>
