--- a/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
+++ b/src/main/webapp/app/entities/view-ponude/list/view-ponude.component.html
@@ -18,7 +18,7 @@
         <button type="button" class="btn btn-primary" (click)="obrazacExcel()">Napravi</button>
         <!--        <button type="button" class="btn btn-primary" (click)="fileInput.click()">Nadji</button>-->
         <!--        <button type="button" class="btn btn-primary" (click)="uploadFile()">Unesi</button>-->
-        <button type="button" class="btn btn-primary" (click)="Excel()">Excel</button>
+        <button *ngIf="postupak" type="button" class="btn btn-primary" (click)="Excel()">Excel</button>
       </div>
       <!--      <input hidden #fileInput type="file" id="file1" />-->
     </div>
