--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -74,52 +74,52 @@
           </div>
         </div>
 
-        <!--        <div class="mb-3">-->
-        <!--          <label class="form-label" for="email" jhiTranslate="global.form.email.label">Email</label>-->
-        <!--          <input-->
-        <!--            type="email"-->
-        <!--            class="form-control"-->
-        <!--            id="email"-->
-        <!--            name="email"-->
-        <!--            placeholder="{{ 'global.form.email.placeholder' | translate }}"-->
-        <!--            formControlName="email"-->
-        <!--            data-cy="email"-->
-        <!--          />-->
+        <div class="mb-3">
+          <label class="form-label" for="email" jhiTranslate="global.form.email.label">Email</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            placeholder="{{ 'global.form.email.placeholder' | translate }}"
+            formControlName="email"
+            data-cy="email"
+          />
 
-        <!--          <div *ngIf="registerForm.get('email')!.invalid && (registerForm.get('email')!.dirty || registerForm.get('email')!.touched)">-->
-        <!--&lt;!&ndash;            <small&ndash;&gt;-->
-        <!--&lt;!&ndash;              class="form-text text-danger"&ndash;&gt;-->
-        <!--&lt;!&ndash;              *ngIf="registerForm.get('email')?.errors?.required"&ndash;&gt;-->
-        <!--&lt;!&ndash;              jhiTranslate="global.messages.validate.email.required"&ndash;&gt;-->
-        <!--&lt;!&ndash;            >&ndash;&gt;-->
-        <!--&lt;!&ndash;              Vaš email je obavezan.&ndash;&gt;-->
-        <!--&lt;!&ndash;            </small>&ndash;&gt;-->
+          <div *ngIf="registerForm.get('email')!.invalid && (registerForm.get('email')!.dirty || registerForm.get('email')!.touched)">
+            <small
+              class="form-text text-danger"
+              *ngIf="registerForm.get('email')?.errors?.required"
+              jhiTranslate="global.messages.validate.email.required"
+            >
+              Vaš email je obavezan.
+            </small>
 
-        <!--            <small-->
-        <!--              class="form-text text-danger"-->
-        <!--              *ngIf="registerForm.get('email')?.errors?.invalid"-->
-        <!--              jhiTranslate="global.messages.validate.email.invalid"-->
-        <!--            >-->
-        <!--              Vaš email is neispravan.-->
-        <!--            </small>-->
+            <small
+              class="form-text text-danger"
+              *ngIf="registerForm.get('email')?.errors?.invalid"
+              jhiTranslate="global.messages.validate.email.invalid"
+            >
+              Vaš email is neispravan.
+            </small>
 
-        <!--            <small-->
-        <!--              class="form-text text-danger"-->
-        <!--              *ngIf="registerForm.get('email')?.errors?.minlength"-->
-        <!--              jhiTranslate="global.messages.validate.email.minlength"-->
-        <!--            >-->
-        <!--              Vaš email mora imati najmanje 5 karaktera.-->
-        <!--            </small>-->
+            <small
+              class="form-text text-danger"
+              *ngIf="registerForm.get('email')?.errors?.minlength"
+              jhiTranslate="global.messages.validate.email.minlength"
+            >
+              Vaš email mora imati najmanje 5 karaktera.
+            </small>
 
-        <!--            <small-->
-        <!--              class="form-text text-danger"-->
-        <!--              *ngIf="registerForm.get('email')?.errors?.maxlength"-->
-        <!--              jhiTranslate="global.messages.validate.email.maxlength"-->
-        <!--            >-->
-        <!--              Vaš email ne može biti duži od 50 karaktera.-->
-        <!--            </small>-->
-        <!--          </div>-->
-        <!--        </div>-->
+            <small
+              class="form-text text-danger"
+              *ngIf="registerForm.get('email')?.errors?.maxlength"
+              jhiTranslate="global.messages.validate.email.maxlength"
+            >
+              Vaš email ne može biti duži od 50 karaktera.
+            </small>
+          </div>
+        </div>
 
         <div class="mb-3">
           <label class="form-label" for="password" jhiTranslate="global.form.newpassword.label">Nova lozinka</label>
