--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -29,13 +29,16 @@
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-          <a *jhiHasAnyAuthority="['ROLE_ADMIN']" class="nav-link" routerLink="pomoc">
-            <span>
-              <fa-icon icon="th-list"></fa-icon>
-              <span>Pomoc</span>
-            </span>
+          <a *jhiHasAnyAuthority="['ROLE_MANAGER']" class="nav-link" routerLink="pomoc">
+            <a *jhiHasAnyAuthority="['ROLE_ADMIN']" class="nav-link" routerLink="pomoc">
+              <span>
+                <fa-icon icon="th-list"></fa-icon>
+                <span>Pomoc</span>
+              </span>
+            </a>
           </a>
         </li>
+
         <!--        <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">-->
         <!--          <a *jhiHasAnyAuthority="['ROLE_ADMIN', 'ROLE_USER', 'ROLE_MANAGER']" class="nav-link" routerLink="chat">-->
         <!--            <span>-->
@@ -177,6 +180,12 @@
                 <span jhiTranslate="global.menu.account.settings">Settings</span>
               </a>
             </li>
+            <!--            <li *ngSwitchCase="true">-->
+            <!--              <a class="dropdown-item" routerLink="pomoc" routerLinkActive="active" (click)="collapseNavbar()" data-cy="settings">-->
+            <!--                <fa-icon icon="book" [fixedWidth]="true"></fa-icon>-->
+            <!--                <span>Pomoc</span>-->
+            <!--              </a>-->
+            <!--            </li>-->
 
             <li *ngSwitchCase="true">
               <a
