--- a/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
+++ b/src/main/webapp/app/entities/specifikacije/list/specifikacije.component.html
@@ -3,7 +3,7 @@
     <span jhiTranslate="tenderApp.specifikacije.home.title">Specifikacijes</span>
     <div class="mb-3">
       <label for="formFile" (click)="fileInput.click()" class="form-label"><span></span></label>
-      <input #fileInput type="file" id="file" (input)="uploadFile()" class="form-control" type="file" id="formFile" />
+      <input #fileInput type="file" id="file" (input)="uploadFile()" class="form-control" />
     </div>
     <div class="d-flex justify-content-end">
       <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
